--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Offline Encryptor</title>
     <link rel="stylesheet" href="index.css">
     <link rel="manifest" href="manifest.json">
-<link rel="stylesheet" href="index.css">
-<script type="importmap">
+    <link rel="stylesheet" href="index.css">
+    <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.1.0/",
@@ -18,8 +18,9 @@
 }
 </script>
 </head>
+
 <body>
-    <div class="container">
+    <div class="container" style="padding-bottom: 1.5rem;">
         <h1>Advanced Offline Encryptor</h1>
 
         <div class="tabs">
@@ -27,7 +28,7 @@
             <button class="tab-button" data-tab="decrypt">Decrypt</button>
         </div>
 
-        <div id="encrypt" class="tab-content active">
+        <div id="encrypt" class="tab-content active" style="position: relative;">
             <h2>Encrypt Data</h2>
             <div class="form-group">
                 <label for="plaintext">Data to Encrypt:</label>
@@ -38,43 +39,82 @@
                 <input type="password" id="passwordEncrypt" aria-label="Password for encryption">
             </div>
             <div class="form-group">
-                <label for="nestingRuleAEncrypt">Nesting Rule (Large Number A):</label>
-                <input type="text" id="nestingRuleAEncrypt" inputmode="numeric" aria-label="Nesting rule number A for encryption">
+                <label for="RuleEncrypt">Rule:</label>
+                <input type="text" id="RuleEncrypt" inputmode="numeric" autocomplete="off"
+                    aria-label="Nesting rule number A for encryption">
             </div>
             <div class="form-group">
                 <label for="obfuscationFunctionEncrypt">Interactive Color Grid (Path):</label>
                 <div id="ChessboardEncrypt"></div>
             </div>
-            <button id="encryptButton" class="button">Encrypt</button>
-            <div class="output-group">
-                <label for="ciphertextOutput">Ciphertext (Base64):</label>
-                <textarea id="ciphertextOutput" rows="5" readonly aria-label="Encrypted ciphertext in Base64"></textarea>
-                <button id="copyCiphertextButton" class="button secondary-button">Copy Ciphertext</button>
+
+            <div style="background-color: #ffffff; padding: 1rem; border-radius: 0.5rem; border-top: #3B82F6; box-shadow: 0 5px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.06); margin-top: 0.5rem; margin-bottom: 1rem; position: relative;"
+                role="region" aria-labelledby="ciphertextOutputHeading">
+                <h3 id="ciphertextOutputHeading"
+                    style="font-size: 1.125rem; font-weight: 600; margin-bottom: 0.25rem; color: #4B5563; padding-right: 60px;">
+                    Ciphertext (Base64):</h3>
+                <p id="ciphertextOutput" aria-label="Encrypted ciphertext in Base64"
+                    style="font-size: 0.875rem; color: #1F2937; word-break: break-all; font-family: monospace; white-space: pre-wrap; min-height: 2.5em; padding-bottom: 2.5rem;">
+                </p>
+                <button id="copyCiphertextButton" aria-label="Copy Ciphertext" title="Copy Ciphertext"
+                    style="position: absolute; bottom: 0.75rem; right: 0.75rem; background-color: transparent; border: none; padding: 0.375rem; cursor: pointer; color: #4B5563; border-radius: 0.25rem; line-height: 0; z-index: 5;">
+                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                        viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" />
+                    </svg>
+                </button>
+                <button id="encryptButton" class="button" aria-label="Encrypt data" title="Encrypt Data"
+                    style="position: absolute; top: 0.75rem; right: 0.75rem; width: 56px; height: 56px; border-radius: 50%; padding: 0; display: flex; align-items: center; justify-content: center; z-index: 10; background-color: #3B82F6; color: white; border: none; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);">
+                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zM9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9V6zm9 14H6V10h12v10zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z" />
+                    </svg>
+                </button>
             </div>
         </div>
 
-        <div id="decrypt" class="tab-content">
+        <div id="decrypt" class="tab-content" style="position: relative;">
             <h2>Decrypt Data</h2>
             <div class="form-group">
                 <label for="ciphertextInput">Ciphertext (Base64):</label>
                 <textarea id="ciphertextInput" rows="5" aria-label="Ciphertext in Base64 to decrypt"></textarea>
             </div>
-             <div class="form-group">
+            <div class="form-group">
                 <label for="passwordDecrypt">Password (used for encryption):</label>
                 <input type="password" id="passwordDecrypt" aria-label="Password used during encryption">
             </div>
             <div class="form-group">
-                <label for="nestingRuleADecrypt">Nesting Rule (Large Number A):</label>
-                <input type="text" id="nestingRuleADecrypt" inputmode="numeric" aria-label="Nesting rule number A for decryption">
+                <label for="RuleDecrypt">Rule:</label>
+                <input type="text" id="RuleDecrypt" inputmode="numeric" autocomplete="off"
+                    aria-label="Nesting rule number A for decryption">
             </div>
             <div class="form-group">
                 <label for="obfuscationFunctionDecrypt">Interactive Color Grid (Path):</label>
                 <div id="ChessboardDecrypt"></div>
             </div>
-            <button id="decryptButton" class="button">Decrypt</button>
-            <div class="output-group">
-                <label for="plaintextOutput">Decrypted Plaintext:</label>
-                <textarea id="plaintextOutput" rows="3" readonly aria-label="Decrypted plaintext"></textarea>
+
+            <div style="background-color: #FFFFFF; padding: 1rem; border-radius: 0.5rem; box-shadow: 0 5px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.06); margin-top: 0.5rem; margin-bottom: 1rem; position: relative;"
+                role="region" aria-labelledby="plaintextOutputHeading">
+                <h3 id="plaintextOutputHeading"
+                    style="font-size: 1.125rem; font-weight: 600; margin-bottom: 0.25rem; color: #4B5563; padding-right: 60px;">
+                    Decrypted Plaintext:</h3>
+                <p id="plaintextOutput" aria-label="Decrypted plaintext"
+                    style="font-size: 0.875rem; color: #1F2937; word-break: break-all; font-family: monospace; white-space: pre-wrap; min-height: 2.5em;">
+                </p>
+                <button id="decryptButton" class="button" aria-label="Decrypt data" title="Decrypt Data"
+                    style="position: absolute; top: 0.75rem; right: 0.75rem; width: 56px; height: 56px; border-radius: 50%; padding: 0; display: flex; align-items: center; justify-content: center; z-index: 10; background-color: #3B82F6; color: white; border: none; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);">
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                        aria-hidden="true">
+                        <g>
+                            <title>Layer 1</title>
+                            <path id="svg_1"
+                                d="m18.04866,10.0625l-1,0l0,-4.0625c0,-2.76 -2.24,-5 -5,-5s-5,2.24 -5,5l0,2.03125l0,2.03125l-1,0c-1.1,0 -2,0.9 -2,2l0,7.9375c0,1.1 0.9,2 2,2l12,0c1.1,0 2,-0.9 2,-2l0,-7.9375c0,-1.1 -0.9,-2 -2,-2zm-9,-4.125c0,-1.66 1.34,-2.9375 3,-2.9375s3,1.34 3,3l0,4.0625l-6,0l-1.99513,0.06832l0,-2.02415l1.99513,-0.10668l0,-2.0625zm9,14.0625l-12,0l0,-7.9375l12,0l0,7.9375z" />
+                            <ellipse cx="11.96875" cy="16.3125" id="svg_4" rx="2.09375" ry="2.09375" />
+                        </g>
+                    </svg>
+                </button>
             </div>
         </div>
 
@@ -88,4 +128,5 @@
 
     <script type="module" src="index.js"></script>
 </body>
+
 </html>
