--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -23,10 +23,24 @@
     <div class="container" style="padding-bottom: 1.5rem;">
         <h1>Advanced Offline Encryptor</h1>
 
-        <div class="tabs">
+        <div class="tabs" style="display: flex; align-items: center; position: relative;">
             <button class="tab-button active" data-tab="encrypt">Encrypt</button>
             <button class="tab-button" data-tab="decrypt">Decrypt</button>
+            <button class="tab-button" data-tab="password-manager">Manager</button>
+            <button id="moreOptionsButton" title="More Options" aria-label="More Options" aria-haspopup="true"
+                style="margin-left: auto; background-color: transparent; border: none; cursor: pointer; padding: 0.25rem; color: #6B7280; line-height: 0;">
+                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                    fill="currentColor">
+                    <path
+                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z" />
+                </svg>
+            </button>
+            <!-- Popup Menu -->
+            <div id="moreOptionsMenu" class="popup-menu" role="menu">
+                <button id="shutdownButton" class="popup-menu-item" role="menuitem">Shutdown</button>
+            </div>
         </div>
+
 
         <div id="encrypt" class="tab-content active" style="position: relative;">
             <h2>Encrypt Data</h2>
@@ -71,6 +85,13 @@
                 <p id="ciphertextOutput" aria-label="Encrypted ciphertext in Base64"
                     style="font-size: 0.875rem; color: #1F2937; word-break: break-all; font-family: monospace; white-space: pre-wrap; min-height: 2.5em; padding-bottom: 2.5rem;">
                 </p>
+                <button id="saveToManagerButton" aria-label="Save to Password Manager" title="Save to Password Manager"
+                    style="position: absolute; bottom: 0.75rem; right: 2.75rem; background-color: transparent; border: none; padding: 0.375rem; cursor: pointer; color: #4B5563; border-radius: 0.25rem; line-height: 0; z-index: 5;">
+                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                        viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M14 10H2v2h12v-2zm0-4H2v2h12V6zM2 16h8v-2H2v2zm19-4v-2h-2v2h-2v2h2v2h2v-2h2v-2z" />
+                    </svg>
+                </button>
                 <button id="copyCiphertextButton" aria-label="Copy Ciphertext" title="Copy Ciphertext"
                     style="position: absolute; bottom: 0.75rem; right: 0.75rem; background-color: transparent; border: none; padding: 0.375rem; cursor: pointer; color: #4B5563; border-radius: 0.25rem; line-height: 0; z-index: 5;">
                     <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
@@ -143,6 +164,16 @@
             </div>
         </div>
 
+        <div id="password-manager" class="tab-content">
+            <div class="pm-header">
+                <h2>Password Manager</h2>
+                <button class="pm-button" id="add-password-btn">Add New</button>
+            </div>
+            <div id="password-list">
+                <!-- Password cards will be injected here by JavaScript -->
+            </div>
+        </div>
+
         <div id="loadingIndicator" class="loading-indicator" style="display: none;">Initializing Worker...</div>
         <div class="progress-bar-container" id="progressBarContainer" style="display: none;" aria-live="polite">
             <div class="progress-bar" id="progressBar"></div>
@@ -155,8 +186,7 @@
     <div id="passwordGeneratorModal" class="modal" style="display: none;" role="dialog" aria-modal="true"
         aria-labelledby="passwordModalTitle">
         <div class="modal-content">
-            <span class="modal-close-button" id="closePasswordModalButton" title="Close"
-                aria-label="Close">&times;</span>
+            <span class="modal-close-button" id="closePasswordModalButton" title="Close" aria-label="Close">×</span>
             <h3 id="passwordModalTitle">Select Password Strength</h3>
             <div class="modal-options">
                 <button type="button" class="modal-option-button" data-length="8">Weak (8 characters)</button>
@@ -169,18 +199,81 @@
     <div id="passwordRetypeDialog" class="modal" style="display: none;" role="dialog" aria-modal="true"
         aria-labelledby="passwordRetypeDialogTitle">
         <div class="modal-content">
-            <span class="modal-close-button" id="closePasswordRetypeButton" title="Close"
-                aria-label="Close">&times;</span>
+            <span class="modal-close-button" id="closePasswordRetypeButton" title="Close" aria-label="Close">×</span>
             <h3 id="passwordRetypeDialogTitle">Confirm Password</h3>
             <div class="form-group" style="margin-top: 15px;">
                 <label for="passwordRetypeInput" style="font-weight: normal;">Retype your password:</label>
-                <input type="password" id="passwordRetypeInput" aria-label="Retype password for confirmation" style="width: 100%;">
+                <input type="password" id="passwordRetypeInput" aria-label="Retype password for confirmation"
+                    style="width: 100%;">
             </div>
-            <button type="button" id="confirmPasswordRetypeButton" class="button" style="margin-top: 15px; width: 100%;">Confirm</button>
+            <button type="button" id="confirmPasswordRetypeButton" class="button"
+                style="margin-top: 15px; width: 100%;">Confirm</button>
         </div>
     </div>
 
+    <template id="password-card-template">
+        <div class="pm-card">
+            <div class="pm-card-content">
+                <!-- View Mode -->
+                <div class="view-mode">
+                    <h3 data-name></h3>
+                    <p data-description></p>
+                </div>
+
+                <!-- Edit Mode -->
+                <div class="edit-mode">
+                    <div class="pm-form-group">
+                        <label for="edit-name">Name</label>
+                        <input type="text" data-name-input id="edit-name">
+                    </div>
+                    <div class="pm-form-group">
+                        <label for="edit-desc">Description</label>
+                        <textarea data-description-input id="edit-desc"></textarea>
+                    </div>
+                    <div class="pm-form-group">
+                        <label for="edit-pass">Password (Base64)</label>
+                        <input type="text" data-password-input id="edit-pass">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Action Buttons -->
+            <div class="pm-card-actions">
+                <button class="pm-icon-button save-btn" title="Save Changes">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M21,20V8.414a1,1,0,0,0-.293-.707L16.293,3.293A1,1,0,0,0,15.586,3H4A1,1,0,0,0,3,4V20a1,1,0,0,0,1,1H20A1,1,0,0,0,21,20ZM9,8h4a1,1,0,0,1,0,2H9A1,1,0,0,1,9,8Zm8,11H7V15a1,1,0,0,1,1-1H16a1,1,0,0,1,1,1Z" />
+                    </svg>
+                </button>
+                <button class="pm-icon-button cancel-btn" title="Cancel Edit">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                    </svg>
+                </button>
+                <button class="pm-icon-button edit-btn" title="Edit">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M19.4,7.34,16.66,4.6A2,2,0,0,0,14.16,4a2,2,0,0,0-1.42.59L5,12.29a1,1,0,0,0-.29.71V17a1,1,0,0,0,1,1H10a1,1,0,0,0,.71-.29l7.71-7.71A2,2,0,0,0,19.4,7.34ZM9.08,16H6V12.92l6.29-6.3,3.08,3.08Z" />
+                    </svg>
+                </button>
+                <button class="pm-icon-button use-for-decrypt-btn" title="Use for Decryption">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z" />
+                    </svg>
+                </button>
+                <button class="pm-icon-button delete-btn" title="Delete">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path
+                            d="M20,6H16V5a3,3,0,0,0-3-3H11A3,3,0,0,0,8,5V6H4A1,1,0,0,0,4,8H5V19a3,3,0,0,0,3,3h8a3,3,0,0,0,3-3V8h1a1,1,0,0,0,0-2ZM10,5a1,1,0,0,1,1-1h2a1,1,0,0,1,1,1V6H10Zm7,14a1,1,0,0,1-1,1H8a1,1,0,0,1-1-1V8H17Z" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </template>
+
     <script type="module" src="index.js"></script>
+    <script type="module" src="password_manager.js"></script>
 </body>
 
 </html>
