--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,8 +69,18 @@
             </div>
             <div class="form-group">
                 <label for="RuleEncrypt">Rule:</label>
-                <input type="text" id="RuleEncrypt" inputmode="numeric" autocomplete="off"
-                    aria-label="Nesting rule number A for encryption">
+                <div style="position: relative; display: flex; align-items: center;">
+                    <input type="password" id="RuleEncrypt" inputmode="numeric" autocomplete="off"
+                        aria-label="Nesting rule number A for encryption" style="width: 100%; padding-right: 2.5rem;">
+                    <button type="button" id="toggleRuleEncrypt" title="Show/Hide Rule" aria-label="Show/Hide Rule"
+                        style="position: absolute; right: 0.5rem; background: transparent; border: none; cursor: pointer; color: #6B7280; padding: 0.25rem;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                            fill="currentColor" class="eye-icon">
+                            <path
+                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5C21.27 7.61 17 4.5 12 4.5zm0 10c-2.48 0-4.5-2.02-4.5-4.5S9.52 5.5 12 5.5s4.5 2.02 4.5 4.5-2.02 4.5-4.5 4.5zm0-7C10.62 7.5 9.5 8.62 9.5 10s1.12 2.5 2.5 2.5 2.5-1.12 2.5-2.5S13.38 7.5 12 7.5z" />
+                        </svg>
+                    </button>
+                </div>
             </div>
             <div class="form-group">
                 <label for="obfuscationFunctionEncrypt">Interactive Color Grid (Path):</label>
@@ -133,8 +143,18 @@
             </div>
             <div class="form-group">
                 <label for="RuleDecrypt">Rule:</label>
-                <input type="text" id="RuleDecrypt" inputmode="numeric" autocomplete="off"
-                    aria-label="Nesting rule number A for decryption">
+                <div style="position: relative; display: flex; align-items: center;">
+                    <input type="password" id="RuleDecrypt" inputmode="numeric" autocomplete="off"
+                        aria-label="Nesting rule number A for decryption" style="width: 100%; padding-right: 2.5rem;">
+                    <button type="button" id="toggleRuleDecrypt" title="Show/Hide Rule" aria-label="Show/Hide Rule"
+                        style="position: absolute; right: 0.5rem; background: transparent; border: none; cursor: pointer; color: #6B7280; padding: 0.25rem;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                            fill="currentColor" class="eye-icon">
+                            <path
+                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5C21.27 7.61 17 4.5 12 4.5zm0 10c-2.48 0-4.5-2.02-4.5-4.5S9.52 5.5 12 5.5s4.5 2.02 4.5 4.5-2.02 4.5-4.5 4.5zm0-7C10.62 7.5 9.5 8.62 9.5 10s1.12 2.5 2.5 2.5 2.5-1.12 2.5-2.5S13.38 7.5 12 7.5z" />
+                        </svg>
+                    </button>
+                </div>
             </div>
             <div class="form-group">
                 <label for="obfuscationFunctionDecrypt">Interactive Color Grid (Path):</label>
