--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -72,12 +72,14 @@
                 <div style="position: relative; display: flex; align-items: center;">
                     <input type="password" id="RuleEncrypt" inputmode="numeric" autocomplete="off"
                         aria-label="Nesting rule number A for encryption" style="width: 100%; padding-right: 2.5rem;">
-                    <button type="button" id="toggleRuleEncrypt" title="Show/Hide Rule" aria-label="Show/Hide Rule"
+                    <button type="button" class="toggle-rule-button" id="toggleRuleEncrypt" title="Show/Hide Rule"
+                        aria-label="Show/Hide Rule"
                         style="position: absolute; right: 0.5rem; background: transparent; border: none; cursor: pointer; color: #6B7280; padding: 0.25rem;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
-                            fill="currentColor" class="eye-icon">
-                            <path
-                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5C21.27 7.61 17 4.5 12 4.5zm0 10c-2.48 0-4.5-2.02-4.5-4.5S9.52 5.5 12 5.5s4.5 2.02 4.5 4.5-2.02 4.5-4.5 4.5zm0-7C10.62 7.5 9.5 8.62 9.5 10s1.12 2.5 2.5 2.5 2.5-1.12 2.5-2.5S13.38 7.5 12 7.5z" />
+                        <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"></path>
+                            <circle cx="12" cy="12" r="3"></circle>
                         </svg>
                     </button>
                 </div>
@@ -128,7 +130,7 @@
                 <div style="position: relative;">
                     <textarea id="ciphertextInput" rows="5" aria-label="Ciphertext in Base64 to decrypt"></textarea>
                     <button id="pasteCiphertextButton" title="Paste" aria-label="Paste into Data to Decrypt"
-                        style="position: absolute; bottom: 8px; right: 28px; background-color: transparent; border: none; padding: 0.375rem; cursor: pointer; color: #4B5563; border-radius: 0.25rem; line-height: 0; z-index: 5;">
+                        style="position: absolute; bottom: 8px; right: 8px; background-color: transparent; border: none; padding: 0.375rem; cursor: pointer; color: #4B5563; border-radius: 0.25rem; line-height: 0; z-index: 5;">
                         <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                             viewBox="0 0 24 24" fill="currentColor">
                             <path
@@ -146,12 +148,14 @@
                 <div style="position: relative; display: flex; align-items: center;">
                     <input type="password" id="RuleDecrypt" inputmode="numeric" autocomplete="off"
                         aria-label="Nesting rule number A for decryption" style="width: 100%; padding-right: 2.5rem;">
-                    <button type="button" id="toggleRuleDecrypt" title="Show/Hide Rule" aria-label="Show/Hide Rule"
+                    <button type="button" class="toggle-rule-button" id="toggleRuleDecrypt" title="Show/Hide Rule"
+                        aria-label="Show/Hide Rule"
                         style="position: absolute; right: 0.5rem; background: transparent; border: none; cursor: pointer; color: #6B7280; padding: 0.25rem;">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
-                            fill="currentColor" class="eye-icon">
-                            <path
-                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5C21.27 7.61 17 4.5 12 4.5zm0 10c-2.48 0-4.5-2.02-4.5-4.5S9.52 5.5 12 5.5s4.5 2.02 4.5 4.5-2.02 4.5-4.5 4.5zm0-7C10.62 7.5 9.5 8.62 9.5 10s1.12 2.5 2.5 2.5 2.5-1.12 2.5-2.5S13.38 7.5 12 7.5z" />
+                        <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"></path>
+                            <circle cx="12" cy="12" r="3"></circle>
                         </svg>
                     </button>
                 </div>
